# deadlocktimers

./: .gitignore  README  README.md  package.json  pnpm-lock.yaml
src/: app.html
src-tauri/: Cargo.toml  rustc-ice-2024-09-03T22_09_22-19624.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src/components/: Timer.svelte
src/routes/: +page.svelte
